# Omni-Text

./: .gitignore  CLAUDE.md  README.md  findings.md  index.html  package.json  pnpm-lock.yaml  progress.md  task_plan.md  tsconfig.json  vite.config.ts
.claude/: CLAUDE.md
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/commands/: history.rs  hotkeys.rs  keychain.rs  llm_provider.rs  mod.rs  text_interaction.rs  tray_icon.rs
src-tauri/src/services/: accessibility.rs  clipboard.rs  key_storage.rs  mod.rs  response_normalizer.rs
src/lib/components/: GlassCard.svelte  HotkeyRecorder.svelte  MenuBarPopover.svelte  StatusIndicator.svelte  Toast.svelte
src/lib/stores/: appState.svelte.ts  theme.svelte.ts
src/lib/utils/: commands.ts
src/lib/views/: AdvancedTab.svelte  HistoryTab.svelte  OnboardingView.svelte  PrivacyTab.svelte  PromptsTab.svelte  ProviderTab.svelte  SettingsTab.svelte
